# QmlVlc

./: .gitignore  CMakeLists.txt
